<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.shamdroid.most3000words.Help"
    android:background="@color/bg"
    android:orientation="vertical"
    android:weightSum="100">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:gravity="center">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:id="@+id/textView21"
                    android:textColor="@color/black"
                    android:singleLine="false"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/symbols_meaning"
                    android:id="@+id/textView14"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/S1"
                    android:id="@+id/textView15"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/S2"
                    android:id="@+id/textView16"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/S3"
                    android:id="@+id/textView17"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/W1"
                    android:id="@+id/textView18"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/W2"
                    android:id="@+id/textView20"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/W3"
                    android:id="@+id/textView19"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:textSize="16dp" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:id="@+id/imageView2"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="100">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnOurApps"
                        android:id="@+id/btnOurApps"
                        android:layout_weight="33"
                        android:background="@drawable/button_bg"
                        android:stateListAnimator="@null"
                        android:textColor="#fff" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnShare"
                        android:id="@+id/btnShare"
                        android:layout_weight="34"
                        android:background="@drawable/button_bg"
                        android:stateListAnimator="@null"
                        android:textColor="#fff" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btnRate"
                        android:id="@+id/btnRate"
                        android:layout_weight="33"
                        android:background="@drawable/button_bg"
                        android:stateListAnimator="@null"
                        android:textColor="#fff" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
